fix broken link in docs
Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

--- a/website/docs/deployment/docker.mdx
+++ b/website/docs/deployment/docker.mdx
@@ -21,7 +21,7 @@ If you want more supported architecture, please open a iussue on Github.
 
 ## Steps
 
-1. Write a `config.yaml` (name can't be changed) following this [page](/info/config) wherever you want
+1. Write a `config.yaml` (name can't be changed) following this [page](/docs/intro/config) wherever you want
 
 2. Run the container (replace **<config_file_path>** with the config file path) :
 ```Bash
