--- a/website/docs/intro/getting-started.mdx
+++ b/website/docs/intro/getting-started.mdx
@@ -18,7 +18,7 @@ Docker Compose launches a full environnement with a pre-configured Prometheus an
 * Docker-Compose 
 
 ## 2. Modify config
-Edit the `config.yaml` file located in `docker-compose` folder. Complete the file with the provided example or visit the [chapter 3](/config) of the documentation to know more about writing config file. 
+Edit the `config.yaml` file located in `docker-compose` folder. Complete the file with the provided example or visit the [chapter 3](/docs/intro/config) of the documentation to know more about writing config file. 
 
 *Example Config:* 
 ```yaml
