Update docusaurus to v3

--- a/website/docs/deployment/docker.mdx
+++ b/website/docs/deployment/docker.mdx
@@ -23,7 +23,7 @@ If you want more supported architecture, please open a iussue on Github.
 
 1. Write a `config.yaml` (name can't be changed) following this [page](/docs/intro/config) wherever you want
 
-2. Run the container (replace **<config_file_path>** with the config file path) :
+2. Run the container (replace **\<config_file_path\>** with the config file path) :
 ```Bash
 docker run -p 8081:8081 -v <config_file_path>:/home/appuser/.config/SuiviBourse suivi-bourse-app
 ```
