--- a/website/docs/deployment/standalone.mdx
+++ b/website/docs/deployment/standalone.mdx
@@ -62,14 +62,14 @@ python3 app/src/main.py
 
 However, we recommend chosing between the following methods to run the standalone app in production.
 
-Replace **<installation_path>** with the path of the folder where you download and extract the project folder (see step 1 of [preparing step](#preparing-steps))
+Replace **\<installation_path\>** with the path of the folder where you download and extract the project folder (see step 1 of [preparing step](#preparing-steps))
 
 <Tabs>
 <TabItem value="systemd" label="SystemD (Linux)">
 
 Almost all versions of Linux come with systemd out of the box, but if your’s didn’t come with it then you can simply install it. You should have a regular, non-root user with sudo privileges configured or access to root user to perform this.
 
-Replace **<user\>** and **<group\>** with the user and the group of the user with whom you ran the step 2.
+Replace **\<user\>** and **\<group\>** with the user and the group of the user with whom you ran the step 2.
 
 1. Create a user service unit file in `/etc/systemd/system/suivi-bourse.service`: 
 
