add dashboard for Grafana v11
Signed-off-by: Paul Brissaud <pbrissaud.pro@gmail.com>

--- a/website/docs/deployment/standalone.mdx
+++ b/website/docs/deployment/standalone.mdx
@@ -163,5 +163,9 @@ scrape_configs:
 ## Grafana dashboard
 
 Depending on your Grafana version, you can add this dashboard to vizualise app metrics :
-- [Version >= 9](https://github.com/pbrissaud/suivi-bourse/blob/master/assets/grafana-dashboard-external-v9.json): Using Candlestick panel
-- [Version >= 8](https://github.com/pbrissaud/suivi-bourse/blob/master/assets/grafana-dashboard-external-v8.json): Using TimeSeries panel
+- [Version 11.x](https://github.com/pbrissaud/suivi-bourse/blob/master/assets/grafana-dashboard-external-v11.json)
+- [Version 10.x](https://github.com/pbrissaud/suivi-bourse/blob/master/assets/grafana-dashboard-external-v10.json)
+- [Version 9.x](https://github.com/pbrissaud/suivi-bourse/blob/master/assets/grafana-dashboard-external-v9.json)
+- [Version 8.x](https://github.com/pbrissaud/suivi-bourse/blob/master/assets/grafana-dashboard-external-v8.json)
+
+From Version 9.x, the dashboard uses the Candlestick panel instead of the TimeSeries panel
